--- a/.circleci/circle.yml
+++ b/.circleci/circle.yml
@@ -9,7 +9,7 @@ machine:
   environment:
     GOPATH_HEAD: "$(echo $GOPATH | cut -d ':' -f 1)"
     GOPATH_BASE: "$GOPATH_HEAD/src/github.com/$CIRCLE_PROJECT_USERNAME"
-    GO15VENDOREXPERIMENT: 1
+#    GO15VENDOREXPERIMENT: 1
     DOCKER_REPO: "securingdevops"
 
   services:
@@ -21,6 +21,7 @@ dependencies:
     - mkdir -p "$GOPATH_BASE"
     - mkdir -p "$GOPATH/bin"
     - cp -r ${HOME}/${CIRCLE_PROJECT_REPONAME} ${GOPATH_BASE}/
+    - cd ${GOPATH_BASE}
     - go get github.com/govend/govend
 
 test:
