--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ machine:
   environment:
     GOPATH_HEAD: "$(echo $GOPATH | cut -d ':' -f 1)"
     GOPATH_BASE: "$GOPATH_HEAD/src/github.com/$CIRCLE_PROJECT_USERNAME"
-#    GO15VENDOREXPERIMENT: 1
+    GO15VENDOREXPERIMENT: 1
     DOCKER_REPO: "securingdevops"
 
   services:
